--- a/styles.css
+++ b/styles.css
@@ -20,23 +20,68 @@ html{
 body{
     min-height: 100vh;
     min-width: 100vw;
+    display: flex;
+    justify-content: center;
 }
 
 .center{
-    margin: 50px 100px;
+    margin-top: 100px;
     min-height: 100vh;
-    display: grid;
+    max-width: 1400px;
+    width: 90vw;
 }
 
 .images-nature{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 30px;
+    margin-bottom: 200px;
+}
 
+.images-city{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+    margin-bottom: 100px;
+}
+
+@media (max-width: 1200px) {
+    .images-nature{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-row-gap: 30px;
+    }
+
+    .images-city{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+}
+
+@media (max-width: 1000px){
+    .images-nature{
+        grid-template-columns: 1fr;
+        grid-row-gap: 30px;
+    }
+    .images-city{
+        grid-template-columns: 1fr;
+    }
+    .center{
+        min-width: 90vw;
+    }
 }
 
 img{
-    max-width: 300px;
-    min-width: 200px;
-    height: 150px;
+    width: 100%;
+    height: 250px;
     object-fit: cover;
-    border-radius: 5px;
+    border-radius: 10px;
+    transition: var(--transition);
+}
 
+img:hover{
+    cursor: pointer;
+    box-shadow: var(--shadow);
 }
