--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 :root{
     --modalBg: rgb(0, 0, 0);
     --transition: all 0.3s linear;
-    --shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    --shadow: rgba(128, 135, 141, 0.692) 0px 8px 24px;
 }
 
 html{
@@ -84,4 +84,89 @@ img{
 img:hover{
     cursor: pointer;
     box-shadow: var(--shadow);
+}
+
+.modal{
+    background-color: var(--modalBg);
+    min-width: 100%;
+    position: fixed;
+    overflow: scroll;
+    min-height: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+.open{
+    display: block;
+    z-index: 20;
+}
+
+.close-section{
+    display: flex;
+    justify-content: flex-end;
+    margin: 10px;
+}
+
+.close-btn{
+    background: transparent;
+    color: white;
+}
+.close-btn i{
+    font-size: 3rem;
+    cursor: pointer;
+}
+
+.image-modal{
+    display: flex;
+    align-items: center;
+    margin: 0 15px;
+}
+.arrow{
+   max-height: fit-content;
+   background: transparent;
+   cursor: pointer;
+}
+.arrow i{
+    color: white;
+    font-size: 3rem;
+}
+
+.modal .image-content{
+    cursor: default;
+    box-shadow: none;
+    min-height: 400px;
+    object-fit: cover;
+}
+
+.title{
+    display: flex;
+    justify-content: center;
+}
+
+.title h3{
+    color: white;
+    text-transform: capitalize;
+    margin: 20px 0 30px 0;
+    font-size: 2rem;
+    font-weight: 300;
+    letter-spacing: 0.5rem;
+}
+
+.images-list{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    margin: 0 70px;
+}
+
+.images-list img{
+    max-height: 100px;
+    border-radius: 0;
+    opacity: 0.6;
+    object-fit: fill;
+}
+
+.images-list img:hover{
+    opacity: 1;
 }
